--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <div class="container"></div>
-    <button>New Grid</button>
-    
+    <div id="field">
+    </div>
+    <button>CHANGE</button>
 </body>
 </html>
